# py-pdf-recibos

./: .gitignore  README.md  main.py  pyproject.toml  recibos_servicos.csv
pypdfrecibos/: data.py  entities.py  main.py  pdf.py
